# gn-action-rerun

./: .gitignore  BUILD.gn  BUILDCONFIG.gn  README.md  myscript.py  write-zip.py
.github/workflows/: CI.yml
