toolchain("mytoolchain") {
  tool("stamp") {
    command = "touch {{output}}"
    description = "STAMP {{output}}"
  }

  tool("copy") {
    command = "cp {{source}} {{output}}"
    description = "COPY {{source}} {{output}}"
  }
}

copy("dep") {
  sources = ["//dep.txt"]
  outputs = ["$root_build_dir/dep.txt"]
}

action("myaction") {
  script = "//myscript.py"
  outputs = ["$target_out_dir/output.txt"]
  args = [rebase_path(outputs[0], root_build_dir)]
  data_deps = ["//:dep"]
}
