toolchain("mytoolchain") {
  tool("stamp") {
    command = "touch {{output}}"
    description = "STAMP {{output}}"
  }

  tool("copy") {
    command = "cp {{source}} {{output}}"
    description = "COPY {{source}} {{output}}"
  }
}

copy("dep") {
  sources = ["//dep.txt"]
  outputs = ["$root_build_dir/dep.txt"]
}

action("write-zip") {
  script = "//write-zip.py"
  outputs = ["$target_out_dir/output.zip"]
  args = [
    rebase_path("$root_build_dir/dep.txt", root_build_dir),
    rebase_path(outputs[0], root_build_dir)
  ]
  deps = ["//:dep"]
}
